--- a/Dataset Comparison.ipynb
+++ b/Dataset Comparison.ipynb
@@ -47,47 +47,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cd meta-mb-internal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "theirs = load('/home/olivia/Documents/Teachable/og_babyai/demos/DUMMY.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(theirs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "for i in range(10):\n",
-    "    ours = load(f'/home/olivia/Documents/Teachable/babyai/meta-mb-internal/data/'\n",
-    "                'DEBUG_teacherPreActionAdvice_dense_threshS0.99_threshA0.8_lr0.0001_ent0.01_currfnone_hot_1'\n",
-    "                f'/buffer/traj_train_level18_idx{i}.pkl')\n",
-    "#     print(to_text(ours.obs[0]['instr']))\n",
-    "    for j in range(len(ours.obs)):\n",
-    "        print(to_text(ours.obs[j]['instr']))"
+    "# Compare Ours to Theirs"
    ]
   },
   {
@@ -97,15 +60,16 @@
    "outputs": [],
    "source": [
     "# loop through\n",
-    "theirs = load('/home/olivia/Documents/Teachable/og_babyai/demos/DUMMY.pkl')\n",
+    "theirs = load('/home/olivia/Teachable/original_babyai/demos/T322_L18_MATCHING_THEIRS.pkl')\n",
     "\n",
     "for i, their_traj in enumerate(theirs):\n",
-    "    print(i)\n",
-    "    ours = load(f'/home/olivia/Documents/Teachable/babyai/meta-mb-internal/data/'\n",
-    "                'DEBUG_teacherPreActionAdvice_dense_threshS0.99_threshA0.8_lr0.0001_ent0.01_currfnone_hot_1'\n",
+    "    if i % 1000 == 0:\n",
+    "        print(i)\n",
+    "    ours = load(f'/home/olivia/Teachable/babyai/meta-mb-internal/data/'\n",
+    "                'T0330_COLLECT_MATCHING_L18_v3_teacherPreActionAdvice_dense_threshS0.99_threshA0.8_lr0.0001_ent0.01_currfnone_hot_1'\n",
     "                f'/buffer/traj_train_level18_idx{i}.pkl')\n",
-    "    print(to_text(ours.obs[0]['instr']))\n",
-    "    print(ours.teacher_action[:,0])\n",
+    "#     print(to_text(ours.obs[0]['instr']))\n",
+    "#     print(ours.teacher_action[:,0])\n",
     "\n",
     "    # actions\n",
     "    their_action = np.array([t for t in their_traj[3]])\n",
@@ -138,6 +102,125 @@
     "for t in theirs[:10]:\n",
     "    print(t[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare theirs to theirs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "theirs_1 = load('/home/olivia/Teachable/original_babyai/demos/T322_L18_MATCHING_THEIRS.pkl')\n",
+    "# theirs_2 = load('/home/olivia/Teachable/original_babyai/demos/T322_L18_MATCHING_THEIRS.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(len(theirs_1), len(theirs_2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "for traj_1, traj_2 in zip(theirs_1, theirs_2):\n",
+    "    print(np.array(traj_1[3]).astype(np.int32))\n",
+    "    print(traj_2[3])\n",
+    "    if i % 100 == 0:\n",
+    "        print(i)\n",
+    "    assert traj_1[0] == traj_2[0], (traj_1[0], traj_2[0])\n",
+    "    obs_1 = blosc.unpack_array(traj_1[1])\n",
+    "    obs_2 = blosc.unpack_array(traj_2[1])\n",
+    "    assert np.array_equal(obs_1, obs_2)\n",
+    "    assert np.array_equal(traj_1[3], traj_2[3])\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg = np.mean([len(traj[3]) for traj in theirs_1[:1000]])\n",
+    "print(avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "avg = np.mean([traj[3] for traj in theirs_1])\n",
+    "print(avg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Compare Ours to Ours"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(323000):\n",
+    "    print(i)\n",
+    "    ours_1 = load(f'/home/olivia/Teachable/babyai/meta-mb-internal/data/'\n",
+    "                'T0330_GOOD_DATASET_L18'\n",
+    "                f'/buffer/traj_train_level18_idx{i}.pkl')\n",
+    "    ours_2 = load(f'/home/olivia/Teachable/babyai/meta-mb-internal/data/'\n",
+    "                'T0330_COLLECT_MATCHING_L18_v3_teacherPreActionAdvice_dense_threshS0.99_threshA0.8_lr0.0001_ent0.01_currfnone_hot_1'\n",
+    "                f'/buffer/traj_train_level18_idx{i}.pkl')\n",
+    "    \n",
+    "    assert np.array_equal(ours_1.teacher_action, ours_2.teacher_action)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -156,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
