log num_feedback in test_generation

--- a/UpdatedPlots.ipynb
+++ b/UpdatedPlots.ipynb
@@ -297,10 +297,8 @@
     "                    feedback_list, data_list = env_data[env_name]\n",
     "                    data_list.append(success)\n",
     "                    if 'num_feedback' in data.columns:\n",
-    "                        print(\"FOUND NUM FEEDBACK!\")\n",
-    "                        feedback_list.append(data['num_feedback'])\n",
+    "                        feedback_list.append(data['num_feedback'].to_numpy() )\n",
     "                    else:\n",
-    "                        print(\"using multiplier\")\n",
     "                        feedback_list.append(np.arange(len(success)).astype(np.float32) * feedback_per_timestep)\n",
     "            for env_name, (env_x_list, env_y_list) in env_data.items():\n",
     "                if not env_name in env_dict:\n",
@@ -308,10 +306,8 @@
     "                policy_list, x_list, y_list, y_std_list = env_dict[env_name]\n",
     "                policy_list.append(legend_name)\n",
     "                shortest_len = min([x[-1] for x in env_x_list])\n",
-    "                print(\"lengths\", [len(run) for run in env_y_list])\n",
     "                x = np.arange(shortest_len)\n",
     "                run_data = np.stack([np.interp(x, run_x, run_y) for run_x, run_y in zip(env_x_list, env_y_list)])\n",
-    "#                 run_data = np.stack(run[:shortest_len] for run in env_y_list)\n",
     "                mean_run_data = np.mean(run_data, axis=0)\n",
     "                std_run_data = np.std(run_data, axis=0)\n",
     "                y_list.append(mean_run_data)\n",
@@ -2029,7 +2025,7 @@
     "    (['T2106'], '2094 CC3 .9', 1),\n",
     "    (['T2105'], '2094 CC3 .8', 1),\n",
     "]\n",
-    "plot_finetune_generalization(runs, 'Finetune, OFF3', smooth=1, x_label='Feedback', y_label=\"Success Rate\") # kangaroo"
+    "plot_finetune_generalization(runs, 'Finetune, OFF3', smooth=1, x_label='Feedback', y_label=\"Success Rate\")"
    ]
   },
   {
@@ -2072,7 +2068,7 @@
     "    (['T2055', 'T2058', 'T2061'], '2046 PA3', 1),\n",
     "    (['T2056', 'T2059', 'T2062'], '2046 None', 1),\n",
     "]\n",
-    "plot_finetune_generalization(runs, 'Finetune', smooth=3) # kangaroo"
+    "plot_finetune_generalization(runs, 'Finetune', smooth=3)"
    ]
   },
   {
@@ -4133,7 +4129,7 @@
     "]\n",
     "\n",
     "data_names = [\n",
-    "        (['T1866'], 'Yes obs each time'), # kangaroo\n",
+    "        (['T1866'], 'Yes obs each time'),\n",
     "    ]\n",
     "plot_curriculum(data_names, 'samples', y=metrics, smooth=10, error_bars=True, title='1866: Is there a gap between PAIO3 and PA? Seems like PAIO3 learns slowly, then matches PA.',\n",
     "               y_lower=.95, y_upper=1)"
@@ -4164,7 +4160,7 @@
     "]\n",
     "\n",
     "data_names = [\n",
-    "        (['T1866'], 'Yes obs each time'), # kangaroo\n",
+    "        (['T1866'], 'Yes obs each time'),\n",
     "    ]\n",
     "plot_curriculum(data_names, 'samples', y=metrics, smooth=10, error_bars=True, title='1866: Are we overfitting? Seems like not much.',\n",
     "               y_lower=.95, y_upper=1)"
@@ -6523,6 +6519,32 @@
     "            title=f\"Success\",\n",
     "           y_lower=0, y_upper=1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runs = [\n",
+    "    (['TEMP', 'TEMP'], 'Temp', 5),\n",
+    "]\n",
+    "plot_finetune_generalization(runs, 'Finetune', smooth=3) # kangaroo"
+   ]
   }
  ],
  "metadata": {
@@ -6541,7 +6563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
