--- a/UpdatedPlots.ipynb
+++ b/UpdatedPlots.ipynb
@@ -11,7 +11,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Useful Functions"
    ]
@@ -19,7 +21,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
@@ -34,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "data_dirs = [\n",
@@ -487,7 +493,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# <font color='purple'> Claim 2: Policies conditioned on feedback can generalize zero-shot to performing new tasks (no distillation). </font> <font color='red'>  </font>\n",
     "\n",
@@ -497,7 +505,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## <font color='purple'>[STATUS] - Easy teachers generalize zero-shot, but hard teachers don't. </font>"
@@ -517,7 +526,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## <font color='purple'>[MAIN] Feedback Efficiency of Different Teachers </font>"
    ]
@@ -525,7 +536,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Finetune"
@@ -1314,7 +1326,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# NEW Finetuning"
    ]
@@ -1322,7 +1336,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## 0-shot"
@@ -1510,7 +1525,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Finetune"
@@ -2031,7 +2047,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "## Distillation steps? [5 seems best, but no big difference]"
@@ -6373,7 +6390,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Grounding teachers as well as possible"
    ]
@@ -6382,6 +6401,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -6424,6 +6444,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -6479,7 +6500,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Fully Observed"
    ]
@@ -6487,7 +6510,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "metrics_acc = [\n",
@@ -6523,21 +6548,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "runs = [\n",
@@ -6563,7 +6594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.0"
   },
   "toc": {
    "base_numbering": 1,
