--- a/notebooks/Diagrams.ipynb
+++ b/notebooks/Diagrams.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "id": "8de813c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 1, 1, 1], [1, 1, 0, 1, 1, 1], [1, 0, 0, 'r', 1, 1], [1, 'g', 1, 0, 0, 1], [1, 0, 1, 0, 1, 1], [1, 1, 1, 1, 1, 1]]\n"
+     ]
+    }
+   ],
    "source": [
     "from envs.babyai.levels.iclr19_levels import *\n",
+    "from envs.d4rl.d4rl_content.locomotion import *\n",
     "from envs.babyai.levels.teachable_robot_levels import Level_TeachableRobot\n",
     "# from minigrid import RoomGridLevel\n",
     "import matplotlib.pyplot as plt"
@@ -14,14 +24,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "c1dc9c0e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Mujoco-based envs failed to import. Set the environment variable D4RL_SUPPRESS_IMPORT_ERROR=1 to suppress this message.\n",
+      "No module named 'd4rl_content'\n",
+      "Warning: Flow failed to import. Set the environment variable D4RL_SUPPRESS_IMPORT_ERROR=1 to suppress this message.\n",
+      "No module named 'd4rl_content'\n",
+      "Warning: FrankaKitchen failed to import. Set the environment variable D4RL_SUPPRESS_IMPORT_ERROR=1 to suppress this message.\n",
+      "No module named 'd4rl_content'\n",
+      "Warning: CARLA failed to import. Set the environment variable D4RL_SUPPRESS_IMPORT_ERROR=1 to suppress this message.\n",
+      "No module named 'd4rl_content'\n",
+      "Warning: GymBullet failed to import. Set the environment variable D4RL_SUPPRESS_IMPORT_ERROR=1 to suppress this message.\n",
+      "No module named 'd4rl_content'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "######\\##OOO#\\#OO#O#\\#G##O#\\#OO#O#\\######\n"
+     ]
+    }
+   ],
+   "source": [
+    "from envs.d4rl_envs import AntEnv"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "id": "87c7d505",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +72,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "6f2a8a93",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Ant env\n",
+    "env = AntEnv(env_name='antmaze-randommaze-v0', feedback_type=['none'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "00fca9a4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "Failed to initialize OpenGL",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-aedac9954ae1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrcParams\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'figure.figsize'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rgb_array'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Teachable/teachable/envs/d4rl_envs.py\u001b[0m in \u001b[0;36mrender\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    403\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    404\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 405\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wrapped_env\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    406\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    407\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mreset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/teachable/lib/python3.7/site-packages/gym/core.py\u001b[0m in \u001b[0;36mrender\u001b[0;34m(self, mode, **kwargs)\u001b[0m\n\u001b[1;32m    238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'human'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 240\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    241\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    242\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/Teachable/teachable/envs/d4rl/d4rl_content/locomotion/wrappers.py\u001b[0m in \u001b[0;36mrender\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_wrapped_env\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/teachable/lib/python3.7/site-packages/gym/envs/mujoco/mujoco_env.py\u001b[0m in \u001b[0;36mrender\u001b[0;34m(self, mode, width, height, camera_id, camera_name)\u001b[0m\n\u001b[1;32m    143\u001b[0m                 \u001b[0mcamera_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcamera_name2id\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcamera_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_viewer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcamera_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcamera_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    146\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'rgb_array'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/teachable/lib/python3.7/site-packages/gym/envs/mujoco/mujoco_env.py\u001b[0m in \u001b[0;36m_get_viewer\u001b[0;34m(self, mode)\u001b[0m\n\u001b[1;32m    172\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviewer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmujoco_py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMjViewer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    173\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'rgb_array'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'depth_array'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 174\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviewer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmujoco_py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMjRenderContextOffscreen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    175\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    176\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviewer_setup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/teachable/lib/python3.7/site-packages/mujoco_py/mjrendercontext.pyx\u001b[0m in \u001b[0;36mmujoco_py.cymj.MjRenderContext.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/teachable/lib/python3.7/site-packages/mujoco_py/mjrendercontext.pyx\u001b[0m in \u001b[0;36mmujoco_py.cymj.MjRenderContext._setup_opengl_context\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/teachable/lib/python3.7/site-packages/mujoco_py/opengl_context.pyx\u001b[0m in \u001b[0;36mmujoco_py.cymj.OffscreenOpenGLContext.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Failed to initialize OpenGL"
+     ]
+    }
+   ],
+   "source": [
+    "plt.rcParams['figure.figsize'] = [20,20]\n",
+    "plt.imshow(env.render('rgb_array'))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "981e4015",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
+   "id": "dd968cb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "ae05c847",
    "metadata": {
     "scrolled": false
    },
@@ -71,6 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a6fc1f41",
    "metadata": {},
    "outputs": [
     {
@@ -91,6 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "0ae8d3e9",
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "f69d3bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "b0310401",
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "49729cec",
    "metadata": {},
    "outputs": [
     {
@@ -165,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "b9f20230",
    "metadata": {},
    "outputs": [
     {
@@ -186,6 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "28aefe68",
    "metadata": {},
    "outputs": [
     {
@@ -213,6 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "51696283",
    "metadata": {},
    "outputs": [
     {
@@ -240,6 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "0e841697",
    "metadata": {},
    "outputs": [
     {
@@ -264,6 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db4b785d",
    "metadata": {
     "scrolled": false
    },
@@ -277,6 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9f2e420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,6 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "089e93b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,6 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "197c883e",
    "metadata": {},
    "outputs": [
     {
@@ -317,6 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "dcbf588f",
    "metadata": {},
    "outputs": [
     {
@@ -334,6 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "c27fa41d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "3cc29cbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,6 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "e311c322",
    "metadata": {
     "scrolled": true
    },
@@ -383,6 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "556545ce",
    "metadata": {
     "scrolled": true
    },
@@ -408,6 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "72c81710",
    "metadata": {},
    "outputs": [
     {
@@ -429,6 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "613527ec",
    "metadata": {},
    "outputs": [
     {
@@ -450,6 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "4a40434b",
    "metadata": {},
    "outputs": [
     {
@@ -470,6 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "b8ffd43f",
    "metadata": {},
    "outputs": [
     {
@@ -490,6 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1b9c525e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
